--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Jokempo (Rock-Paper-Scissors) Game</h1>
+    <h1>JokenPô (Pedra, Papel, Tesoura) Jogo</h1>
     <div id="video-container">
         <video id="video" autoplay playsinline></video>
         <canvas id="canvas"></canvas>
-        <button id="start-button">Start Game</button>
+        <button id="start-button">Jogar</button>
     </div>
     <div id="countdown">3</div>
     <div id="result">
-        <p>Your move: <span id="player-move">None</span></p>
-        <p>Computer's move: <span id="computer-move">None</span></p>
-        <p>Result: <span id="game-result">None</span></p>
+        <p>Sua Jogada: <span id="player-move">Nenhum</span></p>
+        <p>Jogada do seu Inimigo: <span id="computer-move">Nenhum</span></p>
+        <p>Resultado: <span id="game-result">Nenhum</span></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose"></script>
