--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>JokenPô (Pedra, Papel, Tesoura) Jogo</h1>
+    <h1>JokenPô</h1>
+    <h2>Pedra🗿  Papel📜  Tesoura✂️</h2>
     <div id="video-container">
         <video id="video" autoplay playsinline></video>
         <canvas id="canvas"></canvas>
@@ -15,9 +16,9 @@
     </div>
     <div id="countdown">3</div>
     <div id="result">
-        <p>Sua Jogada: <span id="player-move">Nenhum</span></p>
-        <p>Jogada do seu Inimigo: <span id="computer-move">Nenhum</span></p>
-        <p>Resultado: <span id="game-result">Nenhum</span></p>
+        <p>🦸🏻‍♂️Sua Jogada: <span id="player-move">Nenhum</span></p>
+        <p>🦹🏽‍♂️Jogada do seu Inimigo: <span id="computer-move">Nenhum</span></p>
+        <p>🏁Resultado: <span id="game-result">Nenhum</span></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose"></script>
